# cuda-test

./: README.md  add.cu  hello.cpp  meson.build  throughtput
lib/: cpu.h  cuda_err.cuh  cuda_ptr.cuh  mat.cu  mat.cuh  meson.build  pcuda.cuh  rand.h  util.cu  util.cuh
src/: bench_mat_mul.cu  meson.build  test_attention.cu  test_mat_mul.cu  test_vector_add.cu  test_vector_sum.cu
